<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>me.jling</groupId>
    <artifactId>linlang-api</artifactId>
    <version>1.1.0.0-SNAPSHOT</version>
    <packaging>jar</packaging>
    <name>Linlang-API</name>
    <description>Platform-agnostic interfaces and bootstrap for Linlang runtime.</description>
    <url>https://github.com/G-JLING/linlang-api</url>

    <properties>
        <maven.compiler.release>17</maven.compiler.release>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    </properties>

    <dependencies>
        <dependency>
            <groupId>org.jetbrains</groupId>
            <artifactId>annotations</artifactId>
            <version>24.1.0</version>
            <scope>provided</scope>
        </dependency>
    </dependencies>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.13.0</version>
                <configuration>
                    <release>${maven.compiler.release}</release>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-jar-plugin</artifactId>
                <version>3.4.1</version>
                <configuration>
                    <archive>
                        <manifestEntries>
                            <Automatic-Module-Name>me.jling.linlang.api</Automatic-Module-Name>
                        </manifestEntries>
                    </archive>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-javadoc-plugin</artifactId>
                <version>3.7.0</version>
                <configuration>
                    <source>17</source>
                    <encoding>UTF-8</encoding>
                    <doclint>none</doclint>
                    <doctitle>Linlang API</doctitle>
                    <windowtitle>Linlang API</windowtitle>
                    <stylesheetfile>${project.basedir}/javadoc/stylesheet.css</stylesheetfile>

                    <additionalJOptions>
                        <additionalJOption>
                            --add-stylesheet=${project.basedir}/javadoc/extra.css
                        </additionalJOption>
                    </additionalJOptions>

                    <header><![CDATA[
      <div class="jl-doc-header">
        <a href="https://jling.me" title="返回 JLING 首页">返回主站</a>
      </div>
    ]]></header>

                    <bottom><![CDATA[
  <div class="jl-doc-footer">
    <div>
      此 Javadoc 的 CSS 来自
      <a href="https://github.com/BukkitAPI-Translation-Group/Chinese_BukkitAPI" target="_blank">
        Bukkit 中文文档
      </a>
      项目 | © JLING · 保留部分权利
    </div>
  </div>
]]></bottom>
                </configuration>
                <executions>
                    <execution>
                        <id>attach-javadocs</id>
                        <goals>
                            <goal>jar</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>

</project>